[gd_scene load_steps=6 format=3 uid="uid://dqswbye2yynj6"]

[ext_resource type="Shader" path="res://shared/invert.gdshader" id="1_sbh2x"]
[ext_resource type="Texture2D" uid="uid://du7a5pr8r0l6g" path="res://game_objects/player/assets/lightsource.png" id="2_iu256"]
[ext_resource type="Script" path="res://game_objects/player/player.gd" id="3_gauld"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_po3rs"]
shader = ExtResource("1_sbh2x")

[sub_resource type="CircleShape2D" id="CircleShape2D_8p5kq"]
radius = 15.0

[node name="Player" type="Sprite2D"]
material = SubResource("ShaderMaterial_po3rs")
texture = ExtResource("2_iu256")
script = ExtResource("3_gauld")

[node name="DamageArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea2D"]
shape = SubResource("CircleShape2D_8p5kq")

[connection signal="area_entered" from="DamageArea2D" to="." method="_on_damage_area_2d_area_entered"]
[connection signal="area_exited" from="DamageArea2D" to="." method="_on_damage_area_2d_area_exited"]
